[gd_scene load_steps=3 format=3 uid="uid://c68hrdg0n8q0t"]

[ext_resource type="PackedScene" uid="uid://b0fep0a8toxbc" path="res://src/ui/menu/widget/menu_container.tscn" id="1_1y6d1"]
[ext_resource type="Script" uid="uid://xdjihnccoaxj" path="res://src/ui/menu/setting/lang_container.gd" id="2_hvkgl"]

[node name="LangContainer" node_paths=PackedStringArray("first_focus") instance=ExtResource("1_1y6d1")]
script = ExtResource("2_hvkgl")
first_focus = NodePath("ContentContainer/GridContainer/LangOption")

[node name="TitleLabel" parent="TitleContainer" index="1"]
text = "SET_LANG_SELECT"

[node name="GridContainer" type="GridContainer" parent="ContentContainer" index="0"]
layout_mode = 2
columns = 2

[node name="LangLabel" type="Label" parent="ContentContainer/GridContainer" index="0"]
layout_mode = 2
text = "SET_LANG_SELECT"

[node name="LangOption" type="OptionButton" parent="ContentContainer/GridContainer" index="1" groups=["menu_option"]]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "简体中文"
popup/item_1/id = 1
popup/item_2/text = "繁體中文"
popup/item_2/id = 2

[connection signal="focus_entered" from="ContentContainer/GridContainer/LangOption" to="." method="_on_lang_option_focus_entered"]
[connection signal="item_selected" from="ContentContainer/GridContainer/LangOption" to="." method="_on_lang_option_item_selected"]
